# DRYClaw

./: .gitignore  LICENSE  README.md  README.zh-CN.md  README_EN.md  pyproject.toml
demos/claw_work_space/: poem_stats.py  poem_stats.txt  李白诗选.txt  李贺诗选.txt  杜甫诗选.txt  苏轼词选.txt  辛弃疾词选.txt
docs/: cli.md  environment.md  getting-started.md  index.md  videos.md
dryclaw/: __init__.py  main.py
dryclaw/agent/: context_window.py  loop.py  loop_detect.py  read_tracker.py
dryclaw/audit/: __init__.py  logger.py
dryclaw/client/: llm.py  providers.py
dryclaw/config/: config.py
dryclaw/daemon/: __init__.py  server.py
dryclaw/mcp/: __init__.py  client.py
dryclaw/output/: renderer.py
dryclaw/permissions/: __init__.py  engine.py
dryclaw/prompt/: builder.py
dryclaw/schedule/: __init__.py  launchd.py
dryclaw/session/: store.py
dryclaw/tools/: accessibility.py  axserver.py  bash.py  browser.py  clipboard.py  computer.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  http_tool.py  memory_tool.py  notify.py  registry.py  screenshot.py  session_search.py  think.py  wait_for.py
examples/: config.example.yaml  credentials.example.json
